# ChangeLog for dev-util/ditz
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Sep 2009; James Rowe <jnrowe@gmail.com> ditz-0.5-r1.ebuild:
  Dropped arm keyword, as the package is tracked in the arm overlay.

  19 Jul 2009; James Rowe <jnrowe@gmail.com> ditz-0.5-r1.ebuild:
  Fixed location of man page [c66].

  12 Jul 2009; James Rowe <jnrowe@gmail.com> -ditz-0.5.ebuild,
  ditz-0.5-r1.ebuild:
  Keyworded arm.

  12 Jul 2009; James Rowe <jnrowe@gmail.com> ditz-0.5-r1.ebuild:
  Keyworded amd64.

  12 Jul 2009; James Rowe <jnrowe@gmail.com> ditz-0.5-r1.ebuild:
  Keyworded x86.

  05 Jun 2009; James Rowe <jnrowe@gmail.com> ditz-0.5-r1.ebuild:
  Keyworded ~arm.

*ditz-0.5-r1 (28 May 2009)

  28 May 2009; James Rowe <jnrowe@gmail.com> +ditz-0.5-r1.ebuild:
  Don't use bundled trollop library, dev-ruby/trollop contains many fixes.

  07 May 2009; James Rowe <jnrowe@gmail.com> ditz-0.5.ebuild:
  Whitespace removal, to fix pcheck warning.

*ditz-0.5 (02 May 2009)

  02 May 2009; jnrowe@gmail.com +ditz-0.5.ebuild, +metadata.xml:
  Imported from pre-github misc overlay.
