@@ -3,12 +3,13 @@ Hash: SHA1
 
 DIST ditz-0.5.tgz 71338 RMD160 3d48fdda062304f228e0677a5eac7ca5e686af27 SHA1 acdd8d640e84ccbab80f3b61afcf38034886c3c0 SHA256 6edbb0b7faa3e2ba49bacd3c756134b3b5807759564744ecde49e933753fd9be
 EBUILD ditz-0.5-r1.ebuild 780 RMD160 e0e0f63135b33fa03f086e4f0c846cafb4ab4ada SHA1 724fee7295a8dfd56291c860b81dce8dd09c460f SHA256 2506b9bd02e549981cd2f299781ef6ce7a0d3bb8443e53ad69493f26c01ae317
-MISC ChangeLog 1116 RMD160 7205642298eadd38e2a13823c6d8631fc41f6902 SHA1 9a46bf18a3fb1c423c3348a2f2b86591b65af538 SHA256 e9054a6420a0d9ddac8d59b4ea1ae9e45bd1d423de105c1ffe460ba96b621553
+EBUILD ditz-9999.ebuild 808 RMD160 6512256b1cdb91f85583401090eb2d35b74c4b66 SHA1 ba4bfc88da1f47693c96522ce494248e41af5a43 SHA256 735d782851a295ea64fbd5cbaffcb9491c08aa20b629f04cfc4d7477a39828b0
+MISC ChangeLog 1233 RMD160 16bc8cfdb8c150c0b43e84d962b0da270257cfc3 SHA1 2552d3a1d60f42602f37bebeb1795c15a0dd4b0a SHA256 3ab176556a2dbc1014179965e3fd79b231f959c802eac8862c9ba73ad3b010ff
 MISC metadata.xml 958 RMD160 10eb50acd05bab0eea00d2d686c4a317ec31f447 SHA1 cd530ea69430f6bccfc1b0a2c0525859825debc2 SHA256 2ca31a8806819756bf2b29c85b2a3eae6bd28067a5d062857bf0de9ca4bdb893
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEUEARECAAYFAkq64bEACgkQzJrj3cAXR0n++wCVG+qQKD+yUiMn08Rxsi/LN79F
-cQCfZUOBtrTkSI8WvgtAueOtbRuDE/4=
-=9mAI
+iEYEARECAAYFAkrOGHYACgkQzJrj3cAXR0lrcQCgvwhX/enn5+iVAy/4agR5N/kO
+0OEAn28/c1DbFdwLDv0hz9WK7daq7H/R
+=Oa6L
 -----END PGP SIGNATURE-----
