@@ -1,5 +1,9 @@
 # extra line needed because portage is buggy
 
+# James Rowe <jnrowe@gmail.com> (8 Oct 2009)
+# live ebuild for ditz
+=dev-util/git-9999
+
 # James Rowe <jnrowe@gmail.com> (6 Oct 2009)
 # Live ebuild for freshen
 =dev-python/freshen-9999
