@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*ditz-9999 (08 Oct 2009)
+
+  08 Oct 2009; James Rowe <jnrowe@gmail.com> +ditz-9999.ebuild:
+  Added live ditz ebuild.
+
   22 Sep 2009; James Rowe <jnrowe@gmail.com> ditz-0.5-r1.ebuild:
   Dropped arm keyword, as the package is tracked in the arm overlay.
 
